[tool.poetry]
name = "todd"
version = "0.1.0"
description = "Todd - The friendly TODO list manager"
authors = ["Lukas Deutz <lukas.deutz@mailfence.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
