[tool.poetry]
name = "todd"
version = "0.2.0"
description = "Todd - The friendly TODO list manager"
authors = ["Lukas Deutz <lukas.deutz@mailfence.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
autopep8 = "^1.4.4"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.4.2"

[tool.poetry.scripts]
todd = "todd.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

